--- a/2-ui/3-event-details/4-mouse-drag-and-drop/2-drag-heroes/source.view/index.html
+++ b/2-ui/3-event-details/4-mouse-drag-and-drop/2-drag-heroes/source.view/index.html
@@ -12,13 +12,13 @@
 
   <p>Los superhéroes y ls pelota son elementos con la clase "draggable". Haz que sean realmente arrastrables.</p>
 
-  <p>Importante: limits el arrastre a ls ventana. Si el arrastrable alcanza el borde inferior o superior de la ventana, la página debe desplazarse para permitir seguir arrasrtrando.</p>
+  <p>Importante: limita el arrastre a la ventana. Si el arrastrable alcanza el borde inferior o superior de la ventana, la página debe desplazarse para permitir seguir arrasrtrando.</p>
 
-  <p>Si tu monitor es tan grande que cabe todo el documento, haz la ventana del navegador más pequeña para obtener la barra de desplazamiento vertical, así puedes testearlo.</p>
+  <p>Si tu monitor es tan grande que cabe todo el documento, haz la ventana del navegador más pequeña para que aparezca la barra de desplazamiento vertical y así puedas probarlo.</p>
 
   <p>En esta tarea es suficiente manejar solo el desplazamiento vertical. No suele usarse el desplazamiento horizontal, y el manejo es similar si se necesita.</p>
 
-  <p>Y algo más: los héroes nunca pueden dejar la página. Si alcanzan el borde del documento, no se puede aarastrarlos fuera de él.</p>
+  <p>Y algo más: los héroes nunca pueden dejar la página. Si alcanzan el borde del documento, no pueden arrastrarse fuera de él.</p>
 
   <div id="field">
 
