--- a/2-ui/3-event-details/4-mouse-drag-and-drop/2-drag-heroes/solution.view/index.html
+++ b/2-ui/3-event-details/4-mouse-drag-and-drop/2-drag-heroes/solution.view/index.html
@@ -10,11 +10,11 @@
 
   <h2>Ubica los superhéroes por el campo.</h2>
 
-  <p>Los superhéroes y ls pelota son elementos con la clase "draggable". Haz que sean realmente arrastrables.</p>
+  <p>Los superhéroes y la pelota son elementos con la clase "draggable". Haz que sean realmente arrastrables.</p>
 
   <p>Importante: limita el arrastre a la ventana. Si el arrastrable alcanza el borde inferior o superior de la ventana, la página debe desplazarse para permitir seguir arrasrtrando.</p>
 
-  <p>Si tu monitor es tan grande que cabe todo el documento, haz la ventana del navegador más pequeña para que aparezca la barra de desplazamiento vertical y así puedas probarlo.</p>
+  <p>Si en tu monitor cabe el documento entero, haz la ventana del navegador más pequeña para que aparezca la barra de desplazamiento vertical y así puedas probarlo.</p>
 
   <p>En esta tarea es suficiente manejar solo el desplazamiento vertical. No suele usarse el desplazamiento horizontal, y el manejo es similar si se necesita.</p>
 
