--- a/1-js/09-classes/07-mixins/head.html
+++ b/1-js/09-classes/07-mixins/head.html
@@ -28,7 +28,7 @@ let eventMixin = {
   },
 
   /**
-   * Genere el evento y adjúntele los datos.
+   * Genera el evento y adjunta los datos.
    *  this.trigger('select', data1, data2);
    */
   trigger(eventName, ...args) {
