--- a/2-ui/1-document/03-dom-navigation/4-select-diagonal-cells/source.view/index.html
+++ b/2-ui/1-document/03-dom-navigation/4-select-diagonal-cells/source.view/index.html
@@ -54,7 +54,7 @@
   <script>
     let table = document.body.firstElementChild;
 
-    // your code
+    // ... tu código...
   </script>
 </body>
 </html>
