--- a/2-ui/1-document/08-styles-and-classes/2-create-notification/source.view/index.html
+++ b/2-ui/1-document/08-styles-and-classes/2-create-notification/source.view/index.html
@@ -6,7 +6,7 @@
 
 <body>
 
-  <h2>Notification is on the right</h2>
+  <h2>La notificación está a la derecha</h2>
 
   <p>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aspernatur quam ex eaque inventore quod voluptatem adipisci omnis nemo nulla fugit iste numquam ducimus cumque minima porro ea quidem maxime necessitatibus beatae labore soluta voluptatum
@@ -16,10 +16,10 @@
 
   <script>
     function showNotification({top = 0, right = 0, className, html}) {
-      /* your code */
+      /* tu código */
     }
 
-    // test it
+    // prueba
     let i = 1;
     setInterval(() => {
       showNotification({
