--- a/2-ui/1-document/09-size-and-scroll/4-put-ball-in-center/ball-half/index.html
+++ b/2-ui/1-document/09-size-and-scroll/4-put-ball-in-center/ball-half/index.html
@@ -29,8 +29,8 @@
     let ball = document.getElementById('ball')
     let field = document.getElementById('field')
 
-    // ball.offsetWidth=0 before image loaded!
-    // to fix: set width
+    // ball.offsetWidth=0 ¡antes de la carga de la imagen!
+    // para corregirlo: establecer el ancho "width"
     ball.style.left = Math.round(field.clientWidth / 2) + 'px'
     ball.style.top = Math.round(field.clientHeight / 2) + 'px'
   </script>
