--- a/2-ui/1-document/11-coordinates/3-position-at-absolute/solution.view/index.html
+++ b/2-ui/1-document/11-coordinates/3-position-at-absolute/solution.view/index.html
@@ -12,9 +12,9 @@
     esse sequi officia sapiente.</p>
 
   <blockquote>
-    Maestra: Por qué llegas tarde?
+    Maestra: ¿Por qué llegas tarde?
     Alumno: Alguien perdió un billete de cien dólares.
-    Maestra: Que bueno. Lo estábas ayudando a buscarlo?
+    Maestra: Qué bueno, ¿lo estabas ayudando a buscarlo?
     Alumno: No. Estaba parado encima del billete.
   </blockquote>
 
