--- a/2-ui/2-events/01-introduction-browser-events/07-carousel/source.view/index.html
+++ b/2-ui/2-events/01-introduction-browser-events/07-carousel/source.view/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-  <!-- create your markup and styles -->
+  <!-- crea tus "markup" y "styles" -->
 
   <button class="arrow">⇦</button>
   <button class="arrow">⇨</button>
