--- a/2-ui/2-events/03-event-delegation/2-sliding-tree/solution.view/index.html
+++ b/2-ui/2-events/03-event-delegation/2-sliding-tree/solution.view/index.html
@@ -54,15 +54,15 @@
   </ul>
 
   <script>
-    // move all text into <span>
-    // they occupy exactly the place necessary for the text,
+    // mueve todo el texto dentro de <span>
+    // esto ocupa exactamente lo necesario para el texto,
     for (let li of tree.querySelectorAll('li')) {
       let span = document.createElement('span');
       li.prepend(span);
-      span.append(span.nextSibling); // move the text node into span
+      span.append(span.nextSibling); // mueve el nodo texto dentro de span
     }
 
-    // catch clicks on whole tree
+    // atrapa clics en el árbol entero
     tree.onclick = function(event) {
 
       if (event.target.tagName != 'SPAN') {
@@ -70,7 +70,7 @@
       }
 
       let childrenContainer = event.target.parentNode.querySelector('ul');
-      if (!childrenContainer) return; // no children
+      if (!childrenContainer) return; // sin hijos
 
       childrenContainer.hidden = !childrenContainer.hidden;
     }
