--- a/2-ui/2-events/03-event-delegation/4-behavior-tooltip/source.view/index.html
+++ b/2-ui/2-events/03-event-delegation/4-behavior-tooltip/source.view/index.html
@@ -6,11 +6,11 @@
   <style>
     body {
       height: 2000px;
-      /* make body scrollable, the tooltip should work after the scroll */
+      /* hacer body desplazable, el tooltip debe funcionar después del desplazamiento */
     }
 
     .tooltip {
-      /* some styles for the tooltip, you can use your own instead */
+      /* estilos del tooltip, puedes usar uno tuyo en su lugar*/
       position: fixed;
       padding: 10px 20px;
       border: 1px solid #b3c9ce;
@@ -29,14 +29,14 @@
   <p>LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa</p>
   <p>LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa</p>
 
-  <button data-tooltip="the tooltip is longer than the element">Short button</button>
-  <button data-tooltip="HTML<br>tooltip">One more button</button>
+  <button data-tooltip="the tooltip is longer than the element">Botón corto</button>
+  <button data-tooltip="HTML<br>tooltip">Un botón más</button>
 
-  <p>Scroll the page to make buttons appear on the top, check if the tooltips show up correctly.</p>
+  <p>Desplaza la página para que los botones aparezcan arriba de todo, verifica que los tooltips se muestren correctamente.</p>
 
 
   <script>
-    // ...your code...
+    // ... tu código...
   </script>
 
 </body>
