--- a/2-ui/3-event-details/6-pointer-events/slider.view/index.html
+++ b/2-ui/3-event-details/6-pointer-events/slider.view/index.html
@@ -12,7 +12,7 @@
   let shiftX;
 
   function onThumbDown(event) {
-    event.preventDefault(); // prevent selection start (browser action)
+    event.preventDefault(); // evita el inicio de la selección (acción del navegador)
 
     shiftX = event.clientX - thumb.getBoundingClientRect().left;
 
@@ -21,8 +21,8 @@
     thumb.onpointermove = onThumbMove;
 
     thumb.onpointerup = event => {
-      // dragging finished, no need to track pointer any more
-      // ...any other "drag end" logic here...
+      // arrastre finalizado, no se necesita seguir rastreando el puntero
+      // ... toda otra lógica de finalización de arrastre aquí...
       thumb.onpointermove = null;
       thumb.onpointerup = null;
     }
@@ -31,7 +31,7 @@
   function onThumbMove(event) {
     let newLeft = event.clientX - shiftX - slider.getBoundingClientRect().left;
 
-    // if the pointer is out of slider => adjust left to be within the boundaries
+    // si el puntero está fuera del slider => ajustar "izquierda" para que esté dentro de los límites
     if (newLeft < 0) {
       newLeft = 0;
     }
