--- a/2-ui/3-event-details/8-onscroll/2-updown-button/solution.view/index.html
+++ b/2-ui/3-event-details/8-onscroll/2-updown-button/solution.view/index.html
@@ -49,7 +49,7 @@
 
     arrowTop.onclick = function() {
       window.scrollTo(pageXOffset, 0);
-      // after scrollTo, there will be a "scroll" event, so the arrow will hide automatically
+      // después de scrollTo, habrá un evento "scroll", entonces la flecha se ocultará automáticamente
     };
 
     window.addEventListener('scroll', function() {
