--- a/2-ui/5-loading/01-onload-ondomcontentloaded/readystate.view/index.html
+++ b/2-ui/5-loading/01-onload-ondomcontentloaded/readystate.view/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <!-- the sequence should be like this:
+  <!-- la secuencia debe ser así:
   [10] initial readyState:loading
   [20] readyState:interactive
   [21] DOMContentLoaded
