--- a/5-network/12-server-sent-events/eventsource.view/index.html
+++ b/5-network/12-server-sent-events/eventsource.view/index.html
@@ -33,7 +33,7 @@ function start() { // cuando se presiona el botón "Inicio"
   };
 }
 
-function stop() { // when "Stop" button pressed
+function stop() { // cuando se presiona el botón "Detener"
   eventSource.close();
   log("eventSource.close()");
 }
