--- a/1-js/12-generators-iterators/2-async-iterators-generators/head.html
+++ b/1-js/12-generators-iterators/2-async-iterators-generators/head.html
@@ -4,18 +4,18 @@
 
     while (url) {
       const response = await fetch(url, {
-        headers: {'User-Agent': 'Our script'}, // github requires user-agent header
+        headers: {'User-Agent': 'Our script'}, // github requiere la cabecera user-agent
       });
 
-      const body = await response.json(); // parses response as JSON (array of commits)
+      const body = await response.json(); // resuelve la respuesta como JSON (un array de commits)
 
-      // the URL of the next page is in the headers, extract it
+      // la URL de la página siguiente está en las cabeceras, la extraemos
       let nextPage = response.headers.get('Link').match(/<(.*?)>; rel="next"/);
       nextPage = nextPage?.[1];
 
       url = nextPage;
 
-      // yield commits one by one, when they finish - fetch a new page url
+      // entrega los commits uno por uno, cuando finaliza buscamos la URL de una nueva página
       for(let commit of body) {
         yield commit;
       }
