--- a/2-ui/1-document/09-size-and-scroll/4-put-ball-in-center/solution.view/index.html
+++ b/2-ui/1-document/09-size-and-scroll/4-put-ball-in-center/solution.view/index.html
@@ -26,8 +26,8 @@
 
 
   <script>
-    // ball.offsetWidth=0 before image loaded!
-    // to fix: set width
+    // ball.offsetWidth=0 ¡antes de la carga de la imagen!
+    // para corregirlo: establecer el ancho "width"
     ball.style.left = Math.round(field.clientWidth / 2 - ball.offsetWidth / 2) + 'px'
     ball.style.top = Math.round(field.clientHeight / 2 - ball.offsetHeight / 2) + 'px'
   </script>
