--- a/2-ui/1-document/11-coordinates/1-find-point-coordinates/source.view/index.html
+++ b/2-ui/1-document/11-coordinates/1-find-point-coordinates/source.view/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="index.css">
   <script>
-    document.onclick = function(e) { // shows click coordinates
+    document.onclick = function(e) { // muestra las coordenadas del clic
       coords.innerHTML = e.clientX + ':' + e.clientY;
     };
   </script>
