--- a/2-ui/2-events/04-default-browser-action/3-image-gallery/solution.view/index.html
+++ b/2-ui/2-events/04-default-browser-action/3-image-gallery/solution.view/index.html
@@ -9,24 +9,24 @@
 
 <body>
 
-  <p><img id="largeImg" src="https://es.js.cx/gallery/img1-lg.jpg" alt="Large image"></p>
+  <p><img id="largeImg" src="https://es.js.cx/gallery/img1-lg.jpg" alt="Gran imagen"></p>
 
   <ul id="thumbs">
-    <!-- the browser shows a small built-in tooltip on hover with the text from "title" attribute -->
+    <!-- el navegadort tiene un pequeño tooltip incorporado que "on hover" muestra el texto del atributo "title" -->
     <li>
-      <a href="https://es.js.cx/gallery/img2-lg.jpg" title="Image 2"><img src="https://es.js.cx/gallery/img2-thumb.jpg"></a>
+      <a href="https://es.js.cx/gallery/img2-lg.jpg" title="Imagen 2"><img src="https://es.js.cx/gallery/img2-thumb.jpg"></a>
     </li>
     <li>
-      <a href="https://es.js.cx/gallery/img3-lg.jpg" title="Image 3"><img src="https://es.js.cx/gallery/img3-thumb.jpg"></a>
+      <a href="https://es.js.cx/gallery/img3-lg.jpg" title="Imagen 3"><img src="https://es.js.cx/gallery/img3-thumb.jpg"></a>
     </li>
     <li>
-      <a href="https://es.js.cx/gallery/img4-lg.jpg" title="Image 4"><img src="https://es.js.cx/gallery/img4-thumb.jpg"></a>
+      <a href="https://es.js.cx/gallery/img4-lg.jpg" title="Imagen 4"><img src="https://es.js.cx/gallery/img4-thumb.jpg"></a>
     </li>
     <li>
-      <a href="https://es.js.cx/gallery/img5-lg.jpg" title="Image 5"><img src="https://es.js.cx/gallery/img5-thumb.jpg"></a>
+      <a href="https://es.js.cx/gallery/img5-lg.jpg" title="Imagen 5"><img src="https://es.js.cx/gallery/img5-thumb.jpg"></a>
     </li>
     <li>
-      <a href="https://es.js.cx/gallery/img6-lg.jpg" title="Image 6"><img src="https://es.js.cx/gallery/img6-thumb.jpg"></a>
+      <a href="https://es.js.cx/gallery/img6-lg.jpg" title="Imagen 6"><img src="https://es.js.cx/gallery/img6-thumb.jpg"></a>
     </li>
   </ul>
 
