--- a/2-ui/3-event-details/8-onscroll/1-endless-page/solution.view/index.html
+++ b/2-ui/3-event-details/8-onscroll/1-endless-page/solution.view/index.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<h1>Scroll me</h1>
+<h1>Prueba mi Scroll</h1>
 
 <script>
   function populate() {
@@ -19,7 +19,7 @@
 
   window.addEventListener('scroll', populate);
 
-  populate(); // init document
+  populate(); // inicializar document
 </script>
 
 </body>
