--- a/3-frames-and-windows/06-clickjacking/clickjacking.view/index.html
+++ b/3-frames-and-windows/06-clickjacking/clickjacking.view/index.html
@@ -21,7 +21,7 @@
 
   <div>Haga clic para hacerse rico ahora:</div>
 
-  <!-- The url from the victim site -->
+  <!-- la url de la víctima -->
   <iframe src="facebook.html"></iframe>
 
   <button>¡Haga clic aquí!</button>
