--- a/5-network/08-xmlhttprequest/phones.view/index.html
+++ b/5-network/08-xmlhttprequest/phones.view/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-  <button onclick="loadPhones()">Load phones.json!</button>
+  <button onclick="loadPhones()">Carga phones.json!</button>
 
   <script>
     function loadPhones() {
@@ -15,10 +15,10 @@
       xhr.send();
 
       if (xhr.status != 200) {
-        // handle error
+        // manejar error
         alert('Error ' + xhr.status + ': ' + xhr.statusText);
       } else {
-        // show result
+        // mostrar resultado
         alert(xhr.responseText);
       }
     }
