--- a/2-ui/2-events/04-default-browser-action/3-image-gallery/solution.view/index.html
+++ b/2-ui/2-events/04-default-browser-action/3-image-gallery/solution.view/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <p><img id="largeImg" src="https://es.js.cx/gallery/img1-lg.jpg" alt="Gran imagen"></p>
+  <p><img id="largeImg" src="https://es.js.cx/gallery/img1-lg.jpg" alt="Imagen grande"></p>
 
   <ul id="thumbs">
     <!-- el navegadort tiene un pequeño tooltip incorporado que "on hover" muestra el texto del atributo "title" -->
