--- a/2-ui/5-loading/03-onload-onerror/1-load-img-callback/solution.view/index.html
+++ b/2-ui/5-loading/03-onload-onerror/1-load-img-callback/solution.view/index.html
@@ -35,7 +35,7 @@
     }
 
     // para cada imagen,
-    // creemos otra img con el mismo src y verificamos que tenemos su ancho "width" inmediatamente
+    // creemos otra img con el mismo src y verificamos que tenemos su ancho "width"
     function testLoaded() {
       let widthSum = 0;
       for (let i = 0; i < sources.length; i++) {
