--- a/7-animation/2-css-animations/1-animate-logo-css/solution.view/index.html
+++ b/7-animation/2-css-animations/1-animate-logo-css/solution.view/index.html
@@ -32,7 +32,7 @@
     flyjet.onclick = function() {
 
       flyjet.addEventListener('transitionend', function() {
-        if (!ended) { // check to show the message only once
+        if (!ended) { // verificación para que el mensaje solo se muestre una vez
           ended = true;
           alert('Done!');
         }
