--- a/7-animation/2-css-animations/1-animate-logo-css/solution.view/index.html
+++ b/7-animation/2-css-animations/1-animate-logo-css/solution.view/index.html
@@ -27,7 +27,7 @@
   <img id="flyjet" src="https://en.js.cx/clipart/flyjet.jpg">
 
   <script>
-    let ended = false; // will change to true after the animation finishes
+    let ended = false; // cambiará a true cuando la animación finalice
 
     flyjet.onclick = function() {
 
